添加JSR-303 校验框架及hibernate实现

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	</properties>
 
 	<dependencies>
-		<!-- dubbo  -->
+		<!-- dubbo -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
@@ -66,6 +66,18 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.9.2</version>
+		</dependency>
+		<!-- JSR-303 Validation 校验框架 -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
+		</dependency>
+		<!-- JSR-303 Validation 校验框架 hibernate实现 -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.2.0.Final</version>
 		</dependency>
 	</dependencies>
 
